# mcp-lens

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  run_eval.py  test_server.json
corpus/: labels.json
eval_results/: sonnet_results.json
scanner/: analyzer.py  baseline.py  extractor.py  metrics.py
tests/: test_analyzer.py
